--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
@@ -21,6 +22,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.0.6",
+    "@graphql-codegen/typescript": "1.0.6",
+    "@graphql-codegen/typescript-operations": "1.0.6",
+    "@graphql-codegen/typescript-react-apollo": "1.0.6",
     "@types/cookie": "^0.3.2",
     "@types/next": "^7.0.6",
     "@types/react": "^16.4.16",
