--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 
-* linguist-vendored
-*.js linguist-vendored=false
+# * linguist-vendored
+# *.js linguist-vendored=false
  *.* linguist-language=TypeScript
 # *.rb linguist-language=TypeScript
