--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
-  "name": "with-typescript",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc",
-    "generate": "graphql-codegen --config codegen.yml"
-  },
-  "dependencies": {
-    "@zeit/next-typescript": "^1.1.1",
-    "apollo-boost": "^0.3.1",
-    "apollo-link-context": "^1.0.17",
-    "apollo-link-http": "^1.5.14",
-    "cookie": "^0.3.1",
-    "formik": "^1.5.2",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^8.0.3",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.3",
-    "react-dom": "^16.8.6"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^1.0.6",
-    "@graphql-codegen/typescript": "1.0.6",
-    "@graphql-codegen/typescript-operations": "1.0.6",
-    "@graphql-codegen/typescript-react-apollo": "1.0.6",
-    "@types/cookie": "^0.3.2",
-    "@types/next": "^7.0.6",
-    "@types/react": "^16.4.16",
-    "@types/react-dom": "16.0.11",
-    "graphql-code-generator": "^0.18.0",
-    "typescript": "3.2.4"
-  },
-  "license": "ISC"
+   "name": "with-typescript",
+   "version": "1.0.0",
+   "scripts": {
+      "dev": "nodemon  --project tsconfig.server.json server/index.ts --exec ts-node",
+      "build": "next build",
+      "start": "next start",
+      "type-check": "tsc",
+      "generate": "graphql-codegen --config codegen.yml"
+   },
+   "dependencies": {
+      "@zeit/next-typescript": "^1.1.1",
+      "apollo-boost": "^0.3.1",
+      "apollo-link-context": "^1.0.17",
+      "apollo-link-http": "^1.5.14",
+      "cookie": "^0.3.1",
+      "formik": "^1.5.2",
+      "isomorphic-unfetch": "^3.0.0",
+      "next": "^8.0.3",
+      "next-routes": "^1.4.2",
+      "react": "^16.8.6",
+      "react-apollo": "^2.5.3",
+      "react-dom": "^16.8.6"
+   },
+   "devDependencies": {
+      "@graphql-codegen/cli": "^1.0.6",
+      "@graphql-codegen/typescript": "1.0.6",
+      "@graphql-codegen/typescript-operations": "1.0.6",
+      "@graphql-codegen/typescript-react-apollo": "1.0.6",
+      "@types/cookie": "^0.3.2",
+      "@types/next": "^7.0.6",
+      "@types/react": "^16.4.16",
+      "@types/react-dom": "16.0.11",
+      "graphql-code-generator": "^0.18.0",
+      "nodemon": "^1.18.10",
+      "ts-node": "^8.0.3",
+      "ts-node-dev": "^1.0.0-pre.32",
+      "typescript": "3.2.4"
+   },
+   "license": "ISC"
 }
