--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "@zeit/next-typescript": "^1.1.1",
       "apollo-boost": "^0.3.1",
       "apollo-link-context": "^1.0.17",
+      "apollo-link-error": "^1.1.10",
       "apollo-link-http": "^1.5.14",
       "cookie": "^0.3.1",
       "formik": "^1.5.2",
