--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
       "next-routes": "^1.4.2",
       "react": "^16.8.6",
       "react-apollo": "^2.5.3",
-      "react-dom": "^16.8.6"
+      "react-dom": "^16.8.6",
+      "styled-components": "^4.2.0"
    },
    "devDependencies": {
       "@graphql-codegen/cli": "^1.0.6",
@@ -32,6 +33,7 @@
       "@types/next": "^7.0.6",
       "@types/react": "^16.4.16",
       "@types/react-dom": "16.0.11",
+      "@types/styled-components": "^4.1.14",
       "graphql-code-generator": "^0.18.0",
       "nodemon": "^1.18.10",
       "ts-node": "^8.0.3",
